--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "bufferutil": "^4.0.1",
+    "event-target-shim": "^5.0.1",
     "utf-8-validate": "^5.0.2",
     "uuid": "^8.3.1",
     "ws": "^7.3.1"
