--- a/package.json
+++ b/package.json
@@ -9,31 +9,29 @@
     "build": "rm -rf dist && rollup --config"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/express": "^4.17.8",
-    "@types/node": "^14.11.8",
-    "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.2.7",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2",
-    "rollup": "^2.30.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.0",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.1.1",
+    "rollup": "^4.9.4",
     "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-multi-input": "^1.1.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.27.3",
-    "terser": "^5.3.5",
-    "typescript": "^4.0.3"
+    "rollup-plugin-multi-input": "^1.4.1",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "terser": "^5.26.0",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "bufferutil": "^4.0.1",
-    "event-target-shim": "^5.0.1",
-    "utf-8-validate": "^5.0.2",
-    "uuid": "^8.3.1",
-    "ws": "^7.3.1"
+    "@rollup/plugin-terser": "^0.4.4",
+    "event-target-shim": "^6.0.2",
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   }
 }
